--- a/web/css/main.css
+++ b/web/css/main.css
@@ -5,9 +5,10 @@ html,body {
 }
 #container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 100%;
-    height: 100%
+    height: 100%;
+    gap: 5px;
 }
 #canvas {
     flex: 1 1 0;
@@ -15,23 +16,34 @@ html,body {
     min-height: 0;
 }
 #canvas, #controls {
-    margin: 5px;
     border: 1px solid black;
 }
 #controls {
-    margin-top: -6px;
-    padding: 10px;
+    min-width: 200px;
+    padding: 5px;
+    gap: 2px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
 }
 #controls button {
     border: 1px solid black;
     padding: 5px 10px;
-    margin: 0 5px;
     cursor: pointer;
     border-radius: 3px;
     text-transform: uppercase;
-    width: 100px;
+    width: 100%;
     background-color: transparent;
 }
+#controls button.off {
+    background-color: grey;
+}
+#seedRow {
+    display: flex;
+    flex-direction: row;
+    gap: 2px;
+}
+#go {
+    min-width: 50px;
+}
+
