--- a/web/css/main.css
+++ b/web/css/main.css
@@ -2,6 +2,7 @@ html,body {
     width: 100%;
     height: 100%;
     margin: 0;
+    font-family: sans-serif;
 }
 #container {
     display: flex;
@@ -19,7 +20,7 @@ html,body {
     border: 1px solid black;
 }
 #controls {
-    min-width: 200px;
+    flex-basis: 200px;
     padding: 5px;
     gap: 2px;
     display: flex;
@@ -43,6 +44,9 @@ html,body {
     border-color: lightgray;
     cursor: default;
 }
+#controls.disabled button.off {
+    background-color: #ddd;
+}
 #seedRow {
     display: flex;
     flex-direction: row;
@@ -56,4 +60,13 @@ html,body {
     min-height: 40px;
     width: 100%;
     text-align: center;
+    padding: 5px;
+    box-sizing: border-box;
+    font-size: 0.8em;
+}
+
+@media screen and (max-width:600px) {
+    #container {
+        flex-direction: column;
+    }
 }
